--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^18.11.18",
+    "@types/styled-components": "^5.1.26",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
